# film-fan

./: .gitignore  Cargo.toml  README.md
resources/icons/: ICONS
src/: main.rs
src/app/: imp.rs  main.ui  mod.rs
src/render/: imp.rs
src/timeline/: mod.rs
src/timeline/timeline_entry/: imp.rs  mod.rs
