[package]
name = "trying-proj"
description = "an attempt to make a basic video editor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization and deserialization
serde = "1.0.136"
serde_json = "1.0.79"
# GUI library
gtk = { version = "0.4.1", package = "gtk4" }
once_cell = "1.9.0"
# OpenGL backend
glium = "0.31.0"
libloading = "0.7.3"
epoxy = "0.1.0"
